--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {},
   "devDependencies": {
     "body-parser": "^1.18.3",
+    "firebase-admin": "8.3.0",
     "express": "^4.16.3",
     "netlify-lambda": "^0.4.0",
     "serverless-http": "^1.6.0"
